Añadido fichero de segundo capitulo

--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -11,6 +11,7 @@
 \usepackage[dvips]{graphicx}
 % Para escribir en color cuando compilamos con pdflatex
 \usepackage[pdftex,usenames,dvipsnames]{color}
+\definecolor{gray}{RGB}{235,235,235}
 
 % -------------------------------------------------------------------------
 
@@ -78,6 +79,7 @@
 	\mainmatter
 
 	\include{cap_010} % Captura de requisitos
+	\include{cap_020}
 	
 	% ----------------- Glosario --------------------------- 
 	% Para mostrar todas las entradas aunque no estén referenciadas en el documento
