Añadido Diseño de interfaz de usuario a capítulo de análisis. Esto se cambiará a capítulo de diseño en el futuro.

--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -13,6 +13,7 @@
 \usepackage[pdftex,usenames,dvipsnames]{color}
 \definecolor{gray}{RGB}{235,235,235}
 
+\usepackage{float}
 % -------------------------------------------------------------------------
 
 % Paquete fancyhdr -> Para modificar la cabecera y pie de paginas.
