--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -112,6 +112,24 @@
 	\begin{center}
 		\begin{tabularx}{15cm}{|X|}
 			\hline 
+				\bf{LC-A3. Condiciones de uso}\\
+			\hline
+				El sistema debe mostrar una página estática con las condiciones de uso y privacidad de información.\\
+			\hline
+				{\it Prioridad} - Bajo\\
+			\hline
+				{\it Estado} - Aceptado\\
+			\hline
+				{\it Coste}\\
+			\hline
+				{\it Riesgo} - Rutinario\\
+			\hline
+		\end{tabularx}
+	\end{center}
+	
+	\begin{center}
+		\begin{tabularx}{15cm}{|X|}
+			\hline 
 				\bf{LC-A4. Referencias a la aplicación}\\
 			\hline
 				Se muestra una página estática con las referencias al producto realizadas por los entrenadores expertos que han participado en la elaboración de la aplicación.\\
