Finalizada documentación aproximación diseño de interfaz de usuario

--- a/Documentacion/cap_020.tex
+++ b/Documentacion/cap_020.tex
@@ -201,32 +201,78 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 	\subsection{Gestión de entrenamientos} % (fold)
 		\label{sub:gestion_de_entrenamientos}
 	
-	La {\it lista de entrenamientos} (figura \ref{fig:interfaz_entrenamientos}) refleja cada una de las sesiones que inserta el entrenador a lo largo de una temporada. En el resumen se muestran la cantidad de sesiones, el volumen y la carga realizadas en total. Al hacer clic sobre el nombre del entrenamiento, se accede a {\it ver entrenamiento} (figura \ref{fig:interfaz_entrenamientos_show}), que incluye cada uno de los ejercicios añadidos al mismo. Como cada ejercicio tiene asociado un volumen y una carga, se muestra el total de esa sesión. Esto ayuda al entrenador a la hora de hacer los entrenamientos, puesto que conoce el estado a medida que los va desarrollando.
-	Añadir (figura \ref{fig:interfaz_entrenamientos_new}) y modificar entrenamiento son iguales, con la salvedad de que el segundo permite cambiar los datos de los formularios que se agregan en el primero.
-	
-	\begin{figure}[H]
-	  \centering
-	    \includegraphics[width=8cm]{./eps/18_Entrenamientos.eps}
-	  \caption{Interfaz para ver listado de entrenamientos}
-	  \label{fig:interfaz_entrenamientos}
-	\end{figure}
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/18_Entrenamientos.eps}
+		  \caption{Interfaz para ver listado de entrenamientos}
+		  \label{fig:interfaz_entrenamientos}
+		\end{figure}
+		
+	La {\it lista de entrenamientos} (figura \ref{fig:interfaz_entrenamientos}) refleja cada una de las sesiones que inserta el entrenador a lo largo de una temporada. En el resumen se muestran la cantidad de sesiones, el volumen y la carga realizadas en total. Al hacer clic sobre el nombre del entrenamiento, se accede a {\it ver entrenamiento} (figura \ref{fig:interfaz_entrenamientos_show}), que incluye cada uno de los ejercicios añadidos al mismo. Como cada ejercicio tiene asociado un volumen y una carga, se muestra el total de esa sesión. Esto ayuda al entrenador a la hora de hacer los entrenamientos, puesto que conoce el estado a medida que los va desarrollando.\\
+	\newline
+	{\it Añadir} (figura \ref{fig:interfaz_entrenamientos_new}) y {\it modificar entrenamiento} son iguales, con la salvedad de que el segundo permite cambiar los datos de los formularios que se agregan en el primero.
 
-	\begin{figure}[H]
-	  \centering
-	    \includegraphics[width=8cm]{./eps/20_Entrenamientos_show.eps}
-	  \caption{Interfaz para ver entrenamiento}
-	  \label{fig:interfaz_competiciones_show}
-	\end{figure}
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/20_Entrenamientos_show.eps}
+		  \caption{Interfaz para ver entrenamiento}
+		  \label{fig:interfaz_competiciones_show}
+		\end{figure}
 	
-	
-	
-	\begin{figure}[H]
-	  \centering
-	    \includegraphics[width=8cm]{./eps/19_Entrenamientos_new.eps}
-	  \caption{Interfaz para añadir entrenamiento}
-	  \label{fig:interfaz_entrenamientos_new}
-	\end{figure}
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/19_Entrenamientos_new.eps}
+		  \caption{Interfaz para añadir entrenamiento}
+		  \label{fig:interfaz_entrenamientos_new}
+		\end{figure}
 
 	% subsection gestión_de_entrenamientos (end)
+	
+	\subsection{Gestión de test} % (fold)
+		\label{sub:gestion_de_test}
+	
+	Al igual que para las competiciones, la gestión de test (figura \ref{fig:interfaz_test}) se realiza de la misma forma. La diferencia fundamental está en la información que aparece en la tabla de test insertados por el entrenador en la aplicación. Como para las competiciones, cada uno de los resultados asociados a cada test, aparecen en la ficha de cada nadador.
+	
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/26_Test.eps}
+		  \caption{Interfaz para ver listado de test}
+		  \label{fig:interfaz_test}
+		\end{figure}
+	% subsection gestión_de_test (end)
+	
+	\subsection{Gestión diario de incidencias} % (fold)
+		\label{sub:interfaz_gestion_diario_de_incidencias}
+	
+	La interfaz para el diario de incidencias del entrenador difiere del resto en que, cada incidencia, tiene asociada una o varias etiquetas. Por ello, en el resumen que aparece en la interfaz de {\it ver diario de incidencias} (figura \ref{fig:interfaz_incidencias}), se muestran los valores más usados por los entrenadores. Esto ayudará a localizar rápidamente cada tipo de incidencia. Como en casos anteriores, a continuación se muestra {\it ver incidencia} (figura \ref{fig:interfaz_incidencias_show}), {\it añadir incidencia} (figura \ref{fig:interfaz_incidencias_new}) y {\it modificar incidencia} (figura \ref{fig:interfaz_incidencias_modif}).
+	
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/22_Diario.eps}
+		  \caption{Interfaz para ver diario de incidencias}
+		  \label{fig:interfaz_incidencias}
+		\end{figure}
+
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/23_Diario_new.eps}
+		  \caption{Interfaz para añadir incidencia}
+		  \label{fig:interfaz_incidencias_new}
+		\end{figure}
+		
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/24_Diario_show.eps}
+		  \caption{Interfaz para ver incidencia}
+		  \label{fig:interfaz_incidencias_show}
+		\end{figure}
+
+		\begin{figure}[H]
+		  \centering
+		    \includegraphics[width=8cm]{./eps/25_Diario_modif.eps}
+		  \caption{Interfaz para modificar incidencia}
+		  \label{fig:interfaz_incidencias_modif}
+		\end{figure}
+	% subsection interfaz_gestión_diario_de_incidencias (end)
 % section diseño_de_interfaz_de_usuario (end)
 % chapter análisis (end)
