Modificado diagrama de modelo de dominio a blanco y negro

--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -791,7 +791,7 @@
 	\begin{center}
 		\begin{tabularx}{15cm}{|X|}
 			\hline 
-				\bf{LC-E1. Añadir planificación}\\
+				\bf{LC-E1. Crear planificación}\\
 			\hline
 				El entrenador debe poder crear una hoja de cálculo con la planificación de la temporada. Se tienen en cuenta los volúmenes y cargas de los entrenamientos.\\
 			\hline
@@ -809,7 +809,7 @@
 	\begin{center}
 		\begin{tabularx}{15cm}{|X|}
 			\hline 
-				\bf{LC-E2. Subir planificación}\\
+				\bf{LC-E2. Añadir planificación}\\
 			\hline
 				El entrenador debe poder subir al sistema un fichero Excel o pdf con la planificación de la temporada. Este fichero servirá para comparar el volumen y carga de los microciclos \footnote{Estructura de organización del entrenamiento que están constituidos por las sesiones de entrenamientos.} y macrociclos \footnote{Estructura de organización del entrenamiento que están constituidos por un conjunto de microciclos.}\\
 			\hline
