--- a/Documentacion/cap_020.tex
+++ b/Documentacion/cap_020.tex
@@ -15,19 +15,23 @@
 \section{Modelo de casos de uso} % (fold)
 	\label{sec:modelo_casos_de_uso}
 	
+	\subsection{Actores} % (fold)
+		\label{sub:actores}
+	
+	% subsection actores (end)
 % section modelo_de_casos_de_uso (end)
 
 %
-% Sec Diseño de interfaz de usuario
+% Sec Prototipo de interfaz de usuario
 %
-\section{Diseño de interfaz de usuario} % (fold)
-	\label{sec:diseno_de_interfaz_de_usuario}
+\section{Prototipo de interfaz de usuario} % (fold)
+	\label{sec:prototipo_de_interfaz_de_usuario}
 
 	Se realiza una primera aproximación a lo que será la interfaz de usuario que se implementará para la aplicación. Se cuenta con una interfaz pública para los entrenadores que acceden a la web, donde pueden ver las referencias y tour de la aplicación. Por otro lado, están detalladas las interfaces de cada uno de los módulos que proporcionan las funcionalidades a los entrenadores registrados.
 	
 	\begin{figure}[H]
 	  \centering
-	    \includegraphics[width=8cm]{./eps/1_Inicio.eps}
+	    \includegraphics[width=8cm]{./eps/p_interfaz/1_Inicio.eps}
 	  \caption{Inicio en la interfaz pública}
 	  \label{fig:interfaz_publica_inicio}
 	\end{figure}
@@ -41,14 +45,14 @@
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/2_Tour.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/2_Tour.eps}
 		  \caption{Tour en la interfaz pública}
 		  \label{fig:interfaz_publica_tour}
 		\end{figure}
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/3_Contacto.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/3_Contacto.eps}
 		  \caption{Contacto en la interfaz pública}
 		  \label{fig:interfaz_publica_contacto}
 		\end{figure}
@@ -62,14 +66,14 @@
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/4_Registro.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/4_Registro.eps}
 		  \caption{Interfaz para el registro de un entrenador}
 		  \label{fig:interfaz_registro}
 		\end{figure}
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/5_Acceder.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/5_Acceder.eps}
 		  \caption{Interfaz para el acceso de un entrenador}
 		  \label{fig:interfaz_acceso}
 		\end{figure}
@@ -82,7 +86,7 @@
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/6_Dashboard.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/6_Dashboard.eps}
 		  \caption{Interfaz para el dashboard de un entrenador}
 		  \label{fig:interfaz_dashboard}
 		\end{figure}
@@ -96,21 +100,21 @@
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/7_Conf_personal.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/7_Conf_personal.eps}
 		  \caption{Interfaz para la configuración de la información personal en el perfil}
 		  \label{fig:interfaz_conf_personal}
 		\end{figure}
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/8_Conf_contacto.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/8_Conf_contacto.eps}
 		  \caption{Interfaz para la configuración de la información de contacto en el perfil}
 		  \label{fig:interfaz_conf_contacto}
 		\end{figure}
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/9_Conf_mujika.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/9_Conf_mujika.eps}
 		  \caption{Interfaz para la configuración del índice de Mujika en el perfil}
 		  \label{fig:interfaz_conf_mujika}
 		\end{figure}
@@ -135,28 +139,28 @@
 	
 	\begin{figure}[H]
 	  \centering
-	    \includegraphics[width=8cm]{./eps/10_Nadadores.eps}
+	    \includegraphics[width=8cm]{./eps/p_interfaz/10_Nadadores.eps}
 	  \caption{Interfaz para ver listado de nadadores}
 	  \label{fig:interfaz_nadadores}
 	\end{figure}
 	
 	\begin{figure}[H]
 	  \centering
-	    \includegraphics[width=8cm]{./eps/11_Nadadores_new.eps}
+	    \includegraphics[width=8cm]{./eps/p_interfaz/11_Nadadores_new.eps}
 	  \caption{Interfaz para añadir nadador}
 	  \label{fig:interfaz_nadadores_new}
 	\end{figure}
 	
 	\begin{figure}[H]
 	  \centering
-	    \includegraphics[width=8cm]{./eps/12_Nadadores_show.eps}
+	    \includegraphics[width=8cm]{./eps/p_interfaz/12_Nadadores_show.eps}
 	  \caption{Interfaz para ver nadador}
 	  \label{fig:interfaz_nadadores_show}
 	\end{figure}
 	
 	\begin{figure}[H]
 	  \centering
-	    \includegraphics[width=8cm]{./eps/13_Nadadores_modif.eps}
+	    \includegraphics[width=8cm]{./eps/p_interfaz/13_Nadadores_modif.eps}
 	  \caption{Interfaz para modificar nadador}
 	  \label{fig:interfaz_nadadores_modif}
 	\end{figure}
@@ -169,14 +173,14 @@
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/14_Competiciones.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/14_Competiciones.eps}
 		  \caption{Interfaz para ver listado de competiciones}
 		  \label{fig:interfaz_competiciones}
 		\end{figure}
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/15_Competiciones_new.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/15_Competiciones_new.eps}
 		  \caption{Interfaz para añadir competición}
 		  \label{fig:interfaz_competiciones_new}
 		\end{figure}
@@ -185,14 +189,14 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/16_Competiciones_show.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/16_Competiciones_show.eps}
 		  \caption{Interfaz para ver competición}
 		  \label{fig:interfaz_competiciones_show}
 		\end{figure}
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/17_Competiciones_modif.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/17_Competiciones_modif.eps}
 		  \caption{Interfaz para modificar competición}
 		  \label{fig:interfaz_competiciones_modif}
 		\end{figure}
@@ -203,7 +207,7 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/18_Entrenamientos.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/18_Entrenamientos.eps}
 		  \caption{Interfaz para ver listado de entrenamientos}
 		  \label{fig:interfaz_entrenamientos}
 		\end{figure}
@@ -214,14 +218,14 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/20_Entrenamientos_show.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/20_Entrenamientos_show.eps}
 		  \caption{Interfaz para ver entrenamiento}
 		  \label{fig:interfaz_competiciones_show}
 		\end{figure}
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/19_Entrenamientos_new.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/19_Entrenamientos_new.eps}
 		  \caption{Interfaz para añadir entrenamiento}
 		  \label{fig:interfaz_entrenamientos_new}
 		\end{figure}
@@ -235,7 +239,7 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/26_Test.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/26_Test.eps}
 		  \caption{Interfaz para ver listado de test}
 		  \label{fig:interfaz_test}
 		\end{figure}
@@ -248,28 +252,28 @@ Cuando un entrenador hace clic sobre el nombre de la competición en la tabla, s
 	
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/22_Diario.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/22_Diario.eps}
 		  \caption{Interfaz para ver diario de incidencias}
 		  \label{fig:interfaz_incidencias}
 		\end{figure}
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/23_Diario_new.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/23_Diario_new.eps}
 		  \caption{Interfaz para añadir incidencia}
 		  \label{fig:interfaz_incidencias_new}
 		\end{figure}
 		
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/24_Diario_show.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/24_Diario_show.eps}
 		  \caption{Interfaz para ver incidencia}
 		  \label{fig:interfaz_incidencias_show}
 		\end{figure}
 
 		\begin{figure}[H]
 		  \centering
-		    \includegraphics[width=8cm]{./eps/25_Diario_modif.eps}
+		    \includegraphics[width=8cm]{./eps/p_interfaz/25_Diario_modif.eps}
 		  \caption{Interfaz para modificar incidencia}
 		  \label{fig:interfaz_incidencias_modif}
 		\end{figure}
