Modificada la especificación de casos de uso

--- a/Documentacion/bibliografia.bib
+++ b/Documentacion/bibliografia.bib
@@ -49,3 +49,39 @@
   	OPTnote = 	 {},
   	OPTannote = 	 {}
 }
+
+
+@Book{BOA84,
+  	author = 	 {{Boar, B.}},
+  	ALTeditor = 	 {},
+  	title = 	 {Application Prototyping},
+  	publisher = 	 {Wiley-Interscience},
+  	year = 	 {1984},
+	OPTseries = 		{},
+  	OPTkey = 	 {},
+  	OPTvolume = 	 {},
+  	OPTnumber = 	 {},
+  	OPTaddress = 	 {},
+  	OPTedition = 	 {},
+  	OPTmonth = 	 {},
+  	OPTnote = 	 {},
+  	OPTannote = 	 {}
+}
+
+
+@Book{BAL86,
+  	author = 	 {{Balzer, R.} y {Goodman, N.}},
+  	ALTeditor = 	 {},
+  	title = 	 {<<Principles of Good Specification and their implications for Specification Languages>>, in Software Specification Techniques},
+  	publisher = 	 {Addison-Wesley},
+  	year = 	 {1986},
+	OPTseries = 		{},
+  	OPTkey = 	 {},
+  	OPTvolume = 	 {},
+  	OPTnumber = 	 {},
+  	OPTaddress = 	 {},
+  	OPTedition = 	 {},
+  	OPTmonth = 	 {},
+  	OPTnote = 	 {},
+  	OPTannote = 	 {}
+}
