--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -13,7 +13,9 @@
 \usepackage[pdftex,usenames,dvipsnames]{color}
 \definecolor{gray}{RGB}{235,235,235}
 
-\usepackage{float}
+\usepackage{float} % para incluir [H] (here) en las imágenes
+% -------------------------------------------------------------------------
+\usepackage{hyperref} % Para incluir enlaces
 % -------------------------------------------------------------------------
 
 % Paquete fancyhdr -> Para modificar la cabecera y pie de paginas.
