--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -2,10 +2,12 @@
 % Cap Captura de Requisitos
 % ----------------------------------
 %
-%	Comenzar el capítulo hablando sobre el desarrollo de aplicaciones por un ingeniero. Es un proceso complicado en el que se 
-%	localiza primero las necesidades del cliente, usando una lista de características. Esta lista de características va a servir
-%	al jefe de proyecto en la guía a la construcción del sistema final. 
-%	Al finalizar el proyecto, todas las características que están con Estado = Aceptado, tienen que estar en Estado = Finalizado.
+%	- Comenzar el capítulo hablando sobre el desarrollo de aplicaciones por un ingeniero. 
+%	Es un proceso complicado en el que se localiza primero las necesidades del cliente, 
+%	usando una lista de características. Esta lista de características va a servir al jefe 
+%	de proyecto en la guía a la construcción del sistema final. 
+%	Al finalizar el proyecto, todas las características que están con Estado = Aceptado, 
+%	tienen que estar en Estado = Finalizado.
 %	Las características se dividirán en iteraciones e incrementos.
 %
 
